data/all_generated_tests/raw_wast_tests/br_if_TypeMismatchinControlFlowInstructions_1892.wast
;; 3. **Branching with Insufficient Operands**:    - **Description**: Implement a `br_if` instruction that attempts to branch to a block that requires two operand types `[i32, i32]` but only one operand `[i32]` is on the stack.    - **Constraint**: Verifies stack height and operand validation during a branch.    - **Differential Behavior**: WASM will detect the insufficient operands error, wizard_engine may not correctly manage the stack references.

(assert_invalid
  (module
    (func $branch-insufficient-operands
      (block $block1 (result i32 i32)
        (i32.const 1)
        (br_if 0 (i32.const 1))
      )
    )
  )
  "type mismatch"
)